# libgp

./: .gitignore  CMakeLists.txt  Sources.cmake
examples/: CMakeLists.txt  gp_vis.cc  test_cov.cpp
include/: cov.h  cov_factory.h  cov_noise.h  cov_noise_ard.h  cov_se_ard.h  cov_se_iso.h  cov_sum.h  gp.h  sampleset.h
src/: cov.cc  cov_factory.cc  cov_noise.cc  cov_noise_ard.cc  cov_se_ard.cc  cov_se_iso.cc  cov_sum.cc  gp.cc  sampleset.cc
